<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.LoginActivity">

    <EditText
        android:id="@+id/editUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:ems="10"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/usuario"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:ems="10"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:id="@+id/buttonAcesso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@android:color/black"
        android:text="@string/acessar"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>